--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,8 @@ author: bnt4
 version: ${project.version}
 api-version: 1.21
 main: com.github.bnt4.enhancedsurvival.EnhancedSurvival
+softdepend:
+  - PlaceholderAPI
 commands:
   ping:
     description: Shows your current ping
