Added gravestone admin command to get a copy of the items in a gravestone

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -28,3 +28,6 @@ commands:
     description: View your playtime
   lastonline:
     description: View the last online date of other players
+  gravestone:
+    description: Admin command to get a copy of gravestone items
+    permission: enhancedsurvival.admin.gravestone
